# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

bundlemanager_cangjie_wrapper_packages_ohos = [
    "//foundation/bundlemanager/bundlemanager_cangjie_wrapper/ohos/bundle/bundle_manager:ohos.bundle.bundle_manager",
    "//foundation/bundlemanager/bundlemanager_cangjie_wrapper/ohos/skill:ohos.skill",
    "//foundation/bundlemanager/bundlemanager_cangjie_wrapper/ohos/element_name:ohos.element_name",
    "//foundation/bundlemanager/bundlemanager_cangjie_wrapper/ohos/metadata:ohos.metadata"
]

copy_ohos_cangjie_sdk_api_lib("copy_sdk_bundlemanager_cangjie_libs") {
  ohos_inputs = bundlemanager_cangjie_wrapper_packages_ohos
}