# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.bundle_manager") {
  sources = [
    "bundle_manager.cj",
    "cj_bundle_enum.cj",
    "cj_bundle_ffi.cj",
    "cj_bundle_utils.cj",
    "default_app_manager.cj",
    "error_code.cj",
    "error_message.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.labels",
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "global_cangjie_wrapper:ohos.resource_manager",
  ]

  external_deps = [
    "bundle_framework:cj_bundle_manager_ffi"
  ]

  subsystem_name = "bundlemanager"
  part_name = "bundlemanager_cangjie_wrapper"
  lib_name = "bundle_manager"
}
