# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The Cangjie API is in Beta. For details on its capabilities and limitations, please refer to the README file.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.bundle.bundle_manager") {
  sources = [
    "ability_info.cj",
    "application_info.cj",
    "bundle_flag.cj",
    "bundle_info.cj",
    "bundle_manager.cj",
    "cj_bundle_enum.cj",
    "cj_bundle_ffi.cj",
    "cj_bundle_utils.cj",
    "default_app_manager.cj",
    "error_code.cj",
    "error_message.cj",
    "extension_ability_info.cj",
    "hap_module_info.cj",
  ]

  cj_deps = [
    "../../element_name:ohos.element_name",
    "../../metadata:ohos.metadata",
    "../../skill:ohos.skill",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.labels",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "global_cangjie_wrapper:ohos.resource",
  ]

  external_deps = [
    "bundle_framework:cj_bundle_manager_ffi"
  ]

  subsystem_name = "bundlemanager"
  part_name = "bundlemanager_cangjie_wrapper"
}
